--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
     "consistent-return": [0],
     "react/forbid-prop-types": [0],
     "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
-    "react/jsx-uses-react": [0],
+    "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
     "global-require": [0],
     "import/prefer-default-export": [0],
@@ -37,5 +37,11 @@
       "experimentalObjectRestSpread": true
     }
   },
-  "globals": {}
+  "globals": {
+    "document": true,
+    "describe": true,
+    "before": true,
+    "it": true,
+    "afterEach": true
+  }
 }
